src/test/fail/class_method_prop_redecl.lly
#[
SyntaxError: A property in class 'Test' already has the name 'abc'.
Where: File "test/fail/class_method_prop_redecl.lly" at line 8
]#

class Test() {
    var @abc = 10
    define abc() {

    }
}
